# QtReadElf

./: .gitignore  CMakeLists.txt  MainUI.ui  ReadMe.md  TestUI.ui  cmake-multi-platform.yml  main.cpp  mainui.cpp  mainui.h  seg.h  testui.cpp  testui.h
.github/actions/: check_ubuntu_env.yml
.github/workflows/: macos_build.yml  ubuntu_build.yml  window_build.yml
